# paperside-api

./: .env  .env.test  Cargo.toml  README.md  Rocket.toml
migrations/2019-12-21-040224_create_references_table/: down.sql  up.sql
migrations/2019-12-22-231413_create_sessions_and_users_table/: up.sql
migrations/2020-03-24-170801_create_reference_item_submissions/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: config.rs  database.rs  errors.rs  identity.rs  mod.rs  routes.rs  security.rs
src/app/controllers/: auth_controller.rs  mod.rs  reference_items_controller.rs  references_controller.rs  registrations_controller.rs  sessions_controller.rs
src/app/fairings/: mod.rs  session_user.rs
src/app/middleware/: mod.rs  session_user.rs
src/app/models/: author.rs  mod.rs  reference_item.rs  session.rs  user.rs
src/tests/: auth_tests.rs  mod.rs  reference_items_controller_tests.rs  test_helpers.rs
