[package]
name = "paperside-api"
version = "0.1.0"
authors = ["Mason <mason.blier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "^1.0.0", features = ["postgres"] }
dotenv = "^0.9.0"
rocket = "^0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "^0.4.2"
default-features = false
features = ["diesel_postgres_pool","json"]
