[package]
name = "paperside-api"
version = "0.1.0"
authors = ["Mason <mason.blier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
diesel = { version = "^1.0.0", features = ["postgres","chrono"] }
dotenv = "^0.9.0"
rocket = "^0.4.2"
ring = { version = "^0.13" }
postgres = { version = "^0.15", features = ["with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "^5.0"
bcrypt = "0.6.1"
rand = "0.7.2"

[dependencies.rocket_contrib]
version = "^0.4.2"
default-features = false
features = ["diesel_postgres_pool","json"]

[dev-dependencies]
once_cell = "1.2.0"
