[package]
name = "paperside-api"
version = "0.1.1"
authors = ["Mason <mason.blier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
argonautica = "0.2.0"
bytes = "0.5.4"
chrono = { version = "^0.4", features = ["serde"] }
derive_more = "0.99.3"
diesel = { version = "^1.4", features = ["postgres","chrono","r2d2"] }
dotenv = "^0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
lazy_static = "1.4.0"
rand = "0.7.3"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"
